[package]
name = "krpc-client"
version = "0.5.0-0.5.2"
edition = "2021"
authors = ["Kyle Ladd <kyle@ladd.io>"]
description = "A stand-alone client for the Kerbal Space Program kRPC mod."
keywords = ["krpc", "kerbal"]
documentation = "https://docs.rs/krpc-client"
repository = "https://github.com/kladd/krpc-client"
license = "GPL-3.0"

[features]
docs = ["dep:xml-rs"]

[dependencies]
thiserror = "1.0"
protobuf = { version = "3.2.0", features = ["bytes"] }
bytes = "1.4"

[build-dependencies]
protobuf-codegen = "3.2.0"
serde = "1.0"
serde_json = "1.0"
xml-rs = { version = "0.8.4", optional = true }
convert_case = "0.6.0"
codegen = "0.2.0"
