[package]
name = "krpc-client"
version = "0.5.0-0.5.2"
edition = "2021"
authors = ["Kyle Ladd <kyle@ladd.io>"]
description = "A stand-alone client for the Kerbal Space Program kRPC mod."
keywords = ["krpc", "kerbal"]
documentation = "https://docs.rs/krpc-client"
repository = "https://github.com/kladd/krpc-client"
license = "GPL-3.0"

[features]
default = ["fmt"]
docs = ["dep:xml-rs"]
fmt = ["dep:prettyplease"]

[dependencies]
thiserror = "1.0"
protobuf = { version = "3.2.0", features = ["bytes"] }
bytes = "1.4"

[build-dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0.26"
protobuf-codegen = "3.2.0"
serde = "1.0"
serde_json = "1.0"
xml-rs = { version = "0.8.4", optional = true }
convert_case = "0.6.0"
proc-macro2 = "1.0"
prettyplease = { version = "0.2", optional = true }